--- a/app/src/main/res/layout/activity_loteria.xml
+++ b/app/src/main/res/layout/activity_loteria.xml
@@ -22,6 +22,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-
+        <GridView
+            android:id="@+id/simpleGridView"
+            android:layout_width="100sp"
+            android:layout_height="100sp"
+            android:numColumns="4"/>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
