--- a/app/src/main/res/drawable/circle_background.xml
+++ b/app/src/main/res/drawable/circle_background.xml
@@ -2,4 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid android:color="#54AF55" /> <!-- Change the color as needed -->
+    <size android:height="25dp"
+        android:width="25dp"/>
 </shape>
