--- a/app/src/main/res/layout/activity_loteria.xml
+++ b/app/src/main/res/layout/activity_loteria.xml
@@ -15,19 +15,43 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:id="@+id/shuffle_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="12dp"
+        android:layout_marginBottom="56dp"
+        android:autoSizePresetSizes="12dp"
+        android:onClick="shuffle"
+        android:text="sorteio"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.456"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
         android:id="@+id/tipoSorteio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <GridLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/gridLayout"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:columnCount="3"
-        android:rowCount="3"
-        android:layout_margin="16dp"
-        android:layout_gravity="center"/>
+        android:layout_height="wrap_content"
+        android:layout_margin="20sp"
+        android:background="@color/white">
+
+        <GridView
+            android:id="@+id/gridLayout"
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:numColumns="3"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
