--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -3,9 +3,10 @@
 <TextView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/textViewItem"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="70dp"
+    android:layout_height="70dp"
     android:gravity="center"
-    android:textSize="18sp"
-    android:background="@android:color/darker_gray"
-    android:layout_margin="4dp"/>
+    android:textSize="30sp"
+    android:textColor="@color/white"
+    android:background="@drawable/circle_background"
+    android:padding="10sp"/>
