--- a/app/src/main/res/layout/activity_loteria.xml
+++ b/app/src/main/res/layout/activity_loteria.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".activities.LoteriaActivity">
+    tools:context=".LoteriaActivity">
 
     <Spinner
         android:id="@+id/conteudoDropdown"
