--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".activities.RegistrarActivity">
+    tools:context=".RegistrarActivity">
 
     <EditText
         android:id="@+id/email"
@@ -21,7 +21,7 @@
         android:hint="Senha"/>
 
     <Button
-        android:id="@+id/botaoRegister"
+        android:id="@+id/botaoRegistrar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
