--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,13 +15,7 @@
         />
 
     <Button
-        android:id="@+id/botaoLoginId"
+        android:id="@+id/botaoEntrarId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-
-    <Button
-        android:id="@+id/botaoRegistrarId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
 </androidx.appcompat.widget.LinearLayoutCompat>
