--- a/app/src/main/res/drawable/circle_background.xml
+++ b/app/src/main/res/drawable/circle_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#54AF55" /> <!-- Change the color as needed -->
+    <solid android:color="@color/black" /> <!-- Change the color as needed -->
     <size android:height="25dp"
         android:width="25dp"/>
 </shape>
