--- a/app/src/main/res/layout/activity_loteria.xml
+++ b/app/src/main/res/layout/activity_loteria.xml
@@ -7,13 +7,46 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
+    android:background="@color/cream"
     tools:context=".activities.LoteriaActivity">
 
     <Spinner
         android:id="@+id/conteudoDropdown"
-        android:layout_marginTop="66dp"
+        android:layout_marginTop="16dp"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imagem"
+        android:layout_marginTop="16dp"
+        android:layout_width="37dp"
+        android:layout_height="47dp"
+        app:layout_constraintTop_toBottomOf="@id/nomeSorteio"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:id="@+id/nomeSorteio"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:textSize="26dp"
+        app:layout_constraintTop_toBottomOf="@id/conteudoDropdown"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:id="@+id/nomeConcurso"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:textSize="16dp"
+        app:layout_constraintTop_toBottomOf="@id/nomeSorteio"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <Button
         android:id="@+id/shuffle_btn"
@@ -22,36 +55,59 @@
         android:layout_marginVertical="12dp"
         android:layout_marginBottom="56dp"
         android:autoSizePresetSizes="12dp"
+        android:layout_marginTop="16dp"
         android:onClick="shuffle"
-        android:text="sorteio"
+        android:text="Sortear"
         android:textColor="@color/white"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/nomeConcurso"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.456"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/tipoSorteio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:layout_marginTop="16dp"
         android:layout_height="wrap_content"
         android:layout_margin="20sp"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:gravity="center_horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <GridView
             android:id="@+id/gridLayout"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
+            android:layout_gravity="center"
             android:numColumns="3"
+            android:verticalSpacing="12dp"
+            android:horizontalSpacing="70dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <Button
+        android:id="@+id/logoutButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="12dp"
+        android:layout_marginBottom="56dp"
+        android:autoSizePresetSizes="12dp"
+        android:layout_marginTop="16dp"
+        android:onClick="logout"
+        android:text="Logout"
+        android:textColor="@color/peach"
+        android:backgroundTint="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
