--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -9,4 +9,5 @@
     android:textSize="30sp"
     android:textColor="@color/white"
     android:background="@drawable/circle_background"
-    android:padding="10sp"/>
+    android:padding="10sp"
+    />
